--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Clock';
+    src: url('./resources/clock.ttf') format('ttf');
+}
+
 html,body {
     height: 100%;
     background-color: rgb(214, 79, 0);
