--- a/style.css
+++ b/style.css
@@ -8,14 +8,27 @@ html,body {
     background-color: rgb(214, 79, 0);
     margin: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 canvas {
-    border-radius: 2%;
+    background-color: black;
     border: 1vmin solid black;
+    border-radius: 2%;
+    margin-top: 24px;
+}
+
+#score {
+    border-radius: 1vmin;
+    border: 1vmin solid black;
+    height: 8vmin;
+    aspect-ratio: 5 / 2;
+}
+
+#game {
     height: 90vmin;
     aspect-ratio: 1;
-    background-color: black;
+    margin-bottom: 24px;
 }
