--- a/style.css
+++ b/style.css
@@ -11,13 +11,40 @@ html,body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 24px;
+}
+
+body {
+    margin: 24px;
+}
+
+.top-bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    width: 90%;
+    gap: 48px;   
+}
+
+.top-bar * {
+    flex: 1;
+}
+
+button {
+    font-size: min(16px, 2vmin);
+    font-family: 'Segoe UI';
+    font-weight: bold;
+    padding: 2%;
+    color: rgb(255, 255, 255);
+    background: rgb(230, 0, 0);
+    border-radius: 1vmin;
+    border-style: outset;
 }
 
 canvas {
     background-color: black;
     border: 1vmin solid black;
     border-radius: 2%;
-    margin-top: 24px;
     cursor: grab;
 }
 
@@ -29,7 +56,7 @@ canvas {
 }
 
 #game {
-    height: 90vmin;
+    height: 95%;
+    max-height: 95vmin;
     aspect-ratio: 1;
-    margin-bottom: 24px;
 }
