--- a/style.css
+++ b/style.css
@@ -1,62 +1,91 @@
-@font-face {
-    font-family: 'Clock';
-    src: url('./resources/clock.ttf') format('ttf');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+* {
+    box-sizing: border-box;
 }
 
 html,body {
     height: 100%;
-    background-color: rgb(214, 79, 0);
+    background-color: rgb(35, 35, 35);
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 24px;
 }
 
 body {
-    margin: 24px;
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
-.top-bar {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    width: 90%;
-    gap: 48px;   
-}
-
-.top-bar * {
+.cabinet {
+    max-width: 100vw;
+    max-height: 100vw;
     flex: 1;
-}
-
-button {
-    font-size: min(16px, 2vmin);
-    font-family: 'Segoe UI';
-    font-weight: bold;
-    padding: 2%;
-    color: rgb(255, 255, 255);
-    background: rgb(230, 0, 0);
-    border-radius: 1vmin;
-    border-style: outset;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(220, 80, 0);
+    padding: 26px;
+    gap: 26px;
+    aspect-ratio: 1 / 1;
+    border-left: 16px solid rgb(70, 70, 70);
+    border-right: 16px solid rgb(70, 70, 70);
 }
 
 canvas {
+    max-width: 100%;
     background-color: black;
     border: 1vmin solid black;
-    border-radius: 2%;
+    border-radius: 1.5vmin;
     cursor: grab;
 }
 
 #score {
-    border-radius: 1vmin;
-    border: 1vmin solid black;
-    height: 8vmin;
-    aspect-ratio: 5 / 2;
+    max-width: 30%;
+    aspect-ratio: 3 / 1;
 }
 
 #game {
-    height: 95%;
-    max-height: 95vmin;
-    aspect-ratio: 1;
+    flex: 1;
+    aspect-ratio: 1 / 1;
+}
+
+.leaderboard {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.header {
+    height: 76px;
+    padding: 0px 16px;
+    background-color: rgb(20, 20, 20);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    gap: 16px;
+}
+
+.header * {
+    font-family: 'Roboto';
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    padding: 12px 16px;
+    border-radius: 16px;
+}
+
+button {
+    background-color: rgb(221, 81, 0);
+    border:none;
+    color: white;
+}
+
+button:hover {
+    filter: brightness(125%);
+}
+
+.hidden {
+    display: none;
 }
