--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@font-face {
+    font-family: 'Clock';
+    src: url('./resources/clock.ttf') format('ttf');
+}
 
 * {
     box-sizing: border-box;
@@ -25,15 +29,15 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: rgb(220, 80, 0);
-    padding: 26px;
-    gap: 26px;
+    padding: 20px;
+    gap: 20px;
     aspect-ratio: 1 / 1;
     border-left: 16px solid rgb(70, 70, 70);
     border-right: 16px solid rgb(70, 70, 70);
 }
 
 canvas {
-    max-width: 100%;
+    max-width: 98%;
     background-color: black;
     border: 1vmin solid black;
     border-radius: 1.5vmin;
@@ -46,6 +50,7 @@ canvas {
 }
 
 #game {
+    margin-bottom: 20px;
     flex: 1;
     aspect-ratio: 1 / 1;
 }
@@ -56,7 +61,7 @@ canvas {
 }
 
 .header {
-    height: 76px;
+    height: 64px;
     padding: 0px 16px;
     background-color: rgb(20, 20, 20);
     display: flex;
@@ -88,4 +93,19 @@ button:hover {
 
 .hidden {
     display: none;
+}
+
+.scores {
+    background-color: black;
+    color: red;
+    font-size: min(38px, 6vw);
+    font-family: 'Clock';
+    background-color: black;
+    border: 1vmin solid black;
+    border-radius: 1.5vmin;
+}
+
+table * {
+    padding: 8px;
+    text-align: center;
 }
