--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     padding: 0px 16px;
     background-color: rgb(20, 20, 20);
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     gap: 16px;
