Rewrite in react + typescript

--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,9 @@ html,body {
     margin: 0;
 }
 
-body {
+body,#root {
    height: 100%;
+   width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
