--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,13 @@
     font-family: 'Clock';
     src: url('./resources/clock.ttf') format('ttf');
 }
-
-* {
-    box-sizing: border-box;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html,body {
     height: 100%;
-    background-color: rgb(35, 35, 35);
+    background-color: #292524;
     margin: 0;
 }
 
@@ -20,100 +19,4 @@ body,#root {
    display: flex;
    flex-direction: column;
    align-items: center;
-}
-
-.cabinet {
-    max-width: 100vw;
-    max-height: 100vw;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(220, 80, 0);
-    padding: 20px;
-    gap: 20px;
-    aspect-ratio: 1 / 1;
-    border-left: 16px solid rgb(70, 70, 70);
-    border-right: 16px solid rgb(70, 70, 70);
-}
-
-.game,.score {
-    max-width: 98%;
-    background-color: black;
-    border: 1vmin solid black;
-    border-radius: 1.5vmin;
-    cursor: grab;
-}
-
-.score {
-    flex: 1;
-    font-size: 9vmin;
-    font-family: 'Clock';
-    color: red;
-    max-width: 30%;
-    aspect-ratio: 3 / 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.game {
-    margin-bottom: 20px;
-    flex: 10;
-    aspect-ratio: 1 / 1;
-}
-
-.leaderboard {
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.header {
-    height: 64px;
-    padding: 0px 16px;
-    background-color: rgb(20, 20, 20);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    gap: 16px;
-}
-
-.header * {
-    font-family: 'Roboto';
-    font-size: 16px;
-    font-weight: bold;
-    color: white;
-    text-decoration: none;
-    padding: 12px 16px;
-    border-radius: 16px;
-}
-
-button {
-    background-color: rgb(221, 81, 0);
-    border:none;
-    color: white;
-}
-
-button:hover {
-    filter: brightness(125%);
-}
-
-.hidden {
-    display: none;
-}
-
-.scores {
-    background-color: black;
-    color: red;
-    font-size: min(32px, 5vw);
-    font-family: 'Clock';
-    background-color: black;
-    border: 1vmin solid black;
-    border-radius: 1.5vmin;
-}
-
-table * {
-    padding: 8px;
-    text-align: center;
 }
